# Revision history for Perl module autobox::Transform

{{$NEXT}}

1.002 2016-03-01T14:00:06Z

 * Fix #1: Add cpanfile deps



1.001 2016-02-28T22:18:35Z

 * Documentation for all methods



1.000 2016-02-28T21:37:22Z

 * Original version